--- a/pom.xml
+++ b/pom.xml
@@ -213,6 +213,11 @@
 			</dependency>
 			<dependency>
 				<groupId>org.nightlabs.jfire</groupId>
+				<artifactId>org.nightlabs.jfire.personrelation.ear</artifactId>
+				<version>${jfire.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.nightlabs.jfire</groupId>
 				<artifactId>org.nightlabs.jfire.personrelation.issuetracking</artifactId>
 				<version>${jfire.version}</version>
 			</dependency>
