--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.nightlabs.jfire.server.installer</name>
+	<name>org.nightlabs.jfire.min.assembly.installer</name>
 	<comment></comment>
 	<projects>
 	</projects>
