Added versions for various jboss-libs to dependency management
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.parent@19311 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/pom.xml
+++ b/pom.xml
@@ -454,6 +454,47 @@
 				<artifactId>hamcrest-all</artifactId>
 				<version>1.2</version>
 			</dependency>
+
+			<dependency>
+				<groupId>org.jboss.client</groupId>
+				<artifactId>jbossall-client</artifactId>
+				<version>4.2.3.GA</version>
+			</dependency>
+			<dependency>
+				<groupId>jboss</groupId>
+				<artifactId>jbosssx</artifactId>
+				<version>4.2.3.GA</version>
+			</dependency>
+			<dependency>
+				<groupId>jboss</groupId>
+				<artifactId>jbosssx-client</artifactId>
+				<version>4.2.3.GA</version>
+			</dependency>
+			<dependency>
+				<groupId>jboss</groupId>
+				<artifactId>jnp-client</artifactId>
+				<version>4.2.2.GA</version>
+			</dependency>
+			<dependency>
+				<groupId>jboss</groupId>
+				<artifactId>jboss-common</artifactId>
+				<version>4.2.2.GA</version>
+			</dependency>
+			<dependency>
+				<groupId>jboss</groupId>
+				<artifactId>jboss-ejb3</artifactId>
+				<version>4.2.3.GA</version>
+			</dependency>
+			<dependency>
+				<groupId>jboss</groupId>
+				<artifactId>jboss-aop-jdk50-client</artifactId>
+				<version>4.2.2.GA</version>
+			</dependency>
+			<dependency>
+				<groupId>jboss</groupId>
+				<artifactId>jboss-j2ee</artifactId>
+				<version>4.2.3.GA</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 </project>
