Added jboss-ejb3x to the dependency management.
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.parent@19312 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/pom.xml
+++ b/pom.xml
@@ -487,6 +487,11 @@
 			</dependency>
 			<dependency>
 				<groupId>jboss</groupId>
+				<artifactId>jboss-ejb3x</artifactId>
+				<version>4.2.3.GA</version>
+			</dependency>
+			<dependency>
+				<groupId>jboss</groupId>
 				<artifactId>jboss-aop-jdk50-client</artifactId>
 				<version>4.2.2.GA</version>
 			</dependency>
