git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.parent@19490 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/pom.xml
+++ b/pom.xml
@@ -457,6 +457,7 @@
 			<dependency>
 				<groupId>org.nightlabs.jfire</groupId>
 				<artifactId>org.nightlabs.jfire.pbx.ear</artifactId>
+				<type>ear</type>
 				<version>${jfire.version}</version>
 			</dependency>
 			<dependency>
