--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,8 @@
 		<jfire.version>${nightlabs.version}</jfire.version>
 		<jbpm.version>3.2.7</jbpm.version>
 		<rhino.version>1.7R2</rhino.version>
+		<birt.version>2.6.0</birt.version><!-- must correspond to prop in org.nightlabs.jfire.eclipse.parent/pom.xml -->
+		<birt-runtime.group>org.eclipse.birt.runtime.v2-6-0-mvnzd</birt-runtime.group><!-- must correspond to prop in org.nightlabs.jfire.eclipse.parent/pom.xml -->
 	</properties>
 
 	<dependencyManagement>
@@ -545,6 +547,57 @@
 				<version>${jfire.version}</version>
 			</dependency>
 
+			<!-- ###### BIRT runtime ###### -->
+			<dependency>
+				<groupId>${birt-runtime.group}</groupId>
+				<artifactId>coreapi</artifactId>
+				<version>${birt.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>${birt-runtime.group}</groupId>
+				<artifactId>engineapi</artifactId>
+				<version>${birt.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>${birt-runtime.group}</groupId>
+				<artifactId>modelapi</artifactId>
+				<version>${birt.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>${birt-runtime.group}</groupId>
+				<artifactId>org.eclipse.emf</artifactId>
+				<version>${birt.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>${birt-runtime.group}</groupId>
+				<artifactId>org.eclipse.emf.common</artifactId>
+				<version>${birt.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>${birt-runtime.group}</groupId>
+				<artifactId>org.eclipse.emf.ecore</artifactId>
+				<version>${birt.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>${birt-runtime.group}</groupId>
+				<artifactId>org.eclipse.emf.ecore.xmi</artifactId>
+				<version>2.5.0</version>
+			</dependency>
+			<dependency>
+				<groupId>${birt-runtime.group}</groupId>
+				<artifactId>org.eclipse.datatools.connectivity.oda</artifactId>
+				<version>3.3.0</version>
+			</dependency>
+			<dependency>
+				<groupId>${birt-runtime.group}</groupId>
+				<artifactId>org.eclipse.datatools.connectivity.oda.design</artifactId>
+				<version>3.3.0</version>
+			</dependency>
+			<dependency>
+				<groupId>${birt-runtime.group}</groupId>
+				<artifactId>com.ibm.icu</artifactId>
+				<version>4.2.1</version>
+			</dependency>
 
 			<!-- ###### 3rd party ###### -->
 			<dependency>
