--- a/pom.xml
+++ b/pom.xml
@@ -601,14 +601,15 @@
 
 			<!-- ###### 3rd party ###### -->
 			<dependency>
-				<groupId>org.apache.servicemix.bundles</groupId>
-				<artifactId>org.apache.servicemix.bundles.xstream</artifactId>
-				<version>1.3_5</version>
+				<groupId>javax.jmdns</groupId>
+				<artifactId>jmdns</artifactId>
+				<version>3.4.0</version>
 			</dependency>
 			<dependency>
-				<groupId>org.apache.servicemix.bundles</groupId>
-				<artifactId>org.apache.servicemix.bundles.xmlpull</artifactId>
-				<version>1.1.3.1_2</version>
+				<!-- use this on server-side (client-side use geronimo-annotation_1.1_spec) -->
+				<groupId>javax.annotation</groupId>
+				<artifactId>jsr250-api</artifactId>
+				<version>1.0</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.geronimo.specs</groupId>
@@ -626,14 +627,15 @@
 				<version>1.1</version>
 			</dependency>
 			<dependency>
-				<groupId>javax.jmdns</groupId>
-				<artifactId>jmdns</artifactId>
-				<version>3.4.0</version>
-			</dependency>
-			<dependency>
 				<groupId>org.apache.geronimo.specs</groupId>
 				<artifactId>geronimo-j2ee-connector_1.6_spec</artifactId>
 				<version>1.0</version>
+			</dependency>
+			<dependency>
+				<!-- use this on client-side (server-side use javax.annotation) -->
+			    <groupId>org.apache.geronimo.specs</groupId>
+			    <artifactId>geronimo-annotation_1.1_spec</artifactId>
+			    <version>1.0.1</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.servicemix.bundles</groupId>
@@ -641,16 +643,10 @@
 				<version>2.7.1_4</version>
 			</dependency>
 			<dependency>
-				<groupId>javax.annotation</groupId>
-				<artifactId>jsr250-api</artifactId>
-				<version>1.0</version>
-			</dependency>
-			<dependency>
 				<groupId>org.hamcrest</groupId>
 				<artifactId>hamcrest-all</artifactId>
 				<version>1.2</version>
 			</dependency>
-
 			<dependency>
 				<groupId>org.jboss.client</groupId>
 				<artifactId>jbossall-client</artifactId>
@@ -721,6 +717,11 @@
 				<scope>provided</scope>
 			</dependency>
 
+			<dependency>
+				<groupId>net.sourceforge</groupId>
+				<artifactId>net.sourceforge.barbecue</artifactId>
+				<version>1.5-beta1</version>
+			</dependency>
 
 		</dependencies>
 	</dependencyManagement>
