mavenized jfire-max aggregator started
git-svn-id: https://svn.jfire.org/svn/main/trunk/JFireBaseBean@19671 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.nightlabs.jfire</groupId>
 	<artifactId>org.nightlabs.jfire.base.bean</artifactId>
+	<!-- TODO XXX FIXME rename packages according to artifactID (Sebl, 2011-10-12) -->
 	<packaging>bundle</packaging>
 	<name>${project.artifactId}</name>
 
