* 2nd merge from jfire_1.2 branch to trunk
git-svn-id: https://svn.jfire.org/svn/main/trunk/JFireWebAdmin@19934 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/src/main/java/org/nightlabs/jfire/web/admin/beaninfo/beaninfo.properties
+++ b/src/main/java/org/nightlabs/jfire/web/admin/beaninfo/beaninfo.properties
@@ -1,5 +1,6 @@
 org.nightlabs.jfire.web.admin.serverinit.PresetsBean=Presets
-Presets.property.presets.values=jboss_derby,jboss_mysql
+#Presets.property.presets.values=jboss_derby,jboss_mysql
+Presets.property.presets.values=jboss_mysql
 
 org.nightlabs.jfire.servermanager.config.ServerCf=Server
 # I think there is no such property - thus I commented out 'parentConfigModule'. Marco. 
