--- a/pom.xml
+++ b/pom.xml
@@ -2,14 +2,15 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<artifactId>org.nightlabs.jfire.parent</artifactId>
 		<groupId>org.nightlabs.jfire</groupId>
+		<artifactId>org.nightlabs.jfire.parent</artifactId>
 		<version>1.2.0-SNAPSHOT</version>
 		<relativePath>../org.nightlabs.jfire.parent/pom.xml</relativePath>
 	</parent>
-	<groupId>org.nightlabs.jfire</groupId>
+	
 	<artifactId>org.nightlabs.jfire.min.assembly</artifactId>
 	<packaging>pom</packaging>
+	<name>${project.artifactId}</name>
 
 	<dependencies>
 		<dependency>
