--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,9 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.nightlabs.jfire</groupId>
 	<artifactId>org.nightlabs.jfire.parent</artifactId>
-	<version>1.2.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
+	<name>${project.artifactId}</name>
+	
 	<parent>
 		<groupId>org.nightlabs</groupId>
 		<artifactId>org.nightlabs.parent</artifactId>
@@ -125,7 +126,7 @@
 				<version>${jfire.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.nightlabs.jfire</groupId>
+				<groupId>org.nightlabs.jfire.eclipse</groupId>
 				<artifactId>org.nightlabs.jfire.errorreport.mantis</artifactId>
 				<version>${jfire.version}</version>
 			</dependency>
