--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,7 @@
 						<jarModule>
 							<groupId>org.nightlabs.jfire</groupId>
 							<artifactId>org.nightlabs.jfire.query.store</artifactId>
+							<includeInApplicationXml>true</includeInApplicationXml>
 						</jarModule>
 					</modules>
 				</configuration>
