--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,11 @@
 		</dependency>
 		<dependency>
 			<groupId>org.nightlabs.jfire</groupId>
+			<artifactId>org.nightlabs.xstream.ear</artifactId>
+			<type>ear</type>
+		</dependency>
+		<dependency>
+			<groupId>org.nightlabs.jfire</groupId>
 			<artifactId>org.nightlabs.jfire.query.store.ear</artifactId>
 			<type>ear</type>
 		</dependency>
