added NL Rhino wrapper ear
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.parent@20372 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/pom.xml
+++ b/pom.xml
@@ -504,6 +504,12 @@
 			</dependency>
 			<dependency>
 				<groupId>org.nightlabs.jfire</groupId>
+				<artifactId>org.nightlabs.rhino.wrapper.ear</artifactId>
+				<type>ear</type>
+				<version>${jfire.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.nightlabs.jfire</groupId>
 				<artifactId>org.nightlabs.jfire.reporting.ear</artifactId>
 				<type>ear</type>
 				<version>${jfire.version}</version>
