Configured JFire reporting server to work from maven max.assembly (including all related projects and birt-runtime)
git-svn-id: https://svn.jfire.org/svn/main/trunk/NightLabsXStreamEAR@20374 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/pom.xml
+++ b/pom.xml
@@ -18,14 +18,19 @@
 	<dependencies>
 	
 		<dependency>
-			<groupId>org.apache.servicemix.bundles</groupId>
-			<artifactId>org.apache.servicemix.bundles.xmlpull</artifactId>
+			<groupId>xpp3</groupId>
+			<artifactId>xpp3</artifactId>
 		</dependency>
-		
-		<!-- It will also include XPP_min jar with parser so do NOT add exclusions (groupId=*,artifactId=*) here -->
+            		
 		<dependency>
 			<groupId>org.apache.servicemix.bundles</groupId>
 			<artifactId>org.apache.servicemix.bundles.xstream</artifactId>
+			<exclusions>
+				<exclusion>
+					<groupId>*</groupId>
+					<artifactId>*</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		
 	</dependencies>
@@ -67,8 +72,8 @@
 							<includeInApplicationXml>true</includeInApplicationXml>
 						</jarModule>
 						<jarModule>
-							<groupId>org.apache.servicemix.bundles</groupId>
-							<artifactId>org.apache.servicemix.bundles.xmlpull</artifactId>
+							<groupId>xpp3</groupId>
+							<artifactId>xpp3</artifactId>
 							<includeInApplicationXml>true</includeInApplicationXml>
 						</jarModule>
 					</modules>
