--- a/pom.xml
+++ b/pom.xml
@@ -183,6 +183,7 @@
 				<groupId>org.nightlabs.jfire</groupId>
 				<artifactId>org.nightlabs.jfire.jbpm.aop</artifactId>
 				<version>${jfire.version}</version>
+				<type>aop</type>
 			</dependency>
 			<dependency>
 				<groupId>org.nightlabs.jfire</groupId>
@@ -795,4 +796,18 @@
 
 		</dependencies>
 	</dependencyManagement>
+	
+	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>jboss-packaging-maven-plugin</artifactId>
+					<version>2.2</version>
+					<extensions>true</extensions>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
+	
 </project>
